[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Game_Objects/Jumper.gd" type="Script" id=1]
[ext_resource path="res://Sprites/tiles.svg" type="Texture" id=2]
[ext_resource path="res://Sound/boing.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 15 )

[node name="Jumper" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1040, 826, 70, 70 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="jumperStatic" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="jumperStatic"]
position = Vector2( 0, 20 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Jumper_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Jumper_body_exited"]
